<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_id"
        android:layout_marginTop="5dp"
        android:paddingLeft="25dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_id"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPersonName"
            android:hint="@string/text_id" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_check"
            android:background="@color/btn"
            android:textColor="@color/white"
            android:id="@+id/btn_check"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_pw"
        android:layout_marginTop="5dp"
        android:paddingLeft="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_pw"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/text_pw" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_pw_re"
        android:layout_marginTop="5dp"
        android:paddingLeft="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_pw_re"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/text_pw_re" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_store"
        android:layout_marginTop="5dp"
        android:paddingLeft="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_store"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:hint="@string/text_store" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_num"
        android:layout_marginTop="5dp"
        android:paddingLeft="25dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_num"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="number"
        android:digits="0123456789"
        android:hint="@string/text_num" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/btn"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:layout_marginTop="5dp" />


</LinearLayout>