<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base"
    tools:context=".FindingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_id"
        android:layout_marginTop="30dp"
        android:paddingLeft="25dp"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_num"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/find_num"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="number"
        android:digits="0123456789"
        android:hint="@string/text_num" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_store"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/find_store"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/text_store" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="37dp"
        android:textColor="@color/white"
        android:background="@color/main"
        android:id="@+id/find_id"
        android:text="@string/find"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_pw"
        android:layout_marginTop="25dp"
        android:paddingLeft="25dp"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_id"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/find_by_id"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/text_id" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_num"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:paddingLeft="40dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/find_by_num"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/text_num" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="37dp"
        android:textColor="@color/white"
        android:background="@color/main"
        android:id="@+id/find_pw"
        android:text="@string/find"/>







</LinearLayout>
