<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@drawable/cafe_logo"/>

    <EditText
        android:id="@+id/et_login_id"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:hint="@string/text_id" />

    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/text_pw" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/btn"
        android:text="@string/btn_login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_find"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:id="@+id/text_register"
        android:layout_gravity="center"
        android:textSize="17sp" />


</LinearLayout>

